# ebpf-learning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pom.xml  rke_helper.sh
docker/: compose.yml  prometheus.yml
docs/kubernetes/up&running/cap3/: README.md
docs/kubernetes/up&running/cap4/: README.md
docs/liz/ch1/: README.md
ebpf/: Makefile  cpu_monitor.bpf.c  hello.bpf.c  hello_map.bpf.c  hello_ring_buffer.bpf.c  k8s_performance.bpf.c  memory_monitor.bpf.c  other.bpf.c  syscall_frequency.bpf.c  syscall_latency_monitor.bpf.c
include/: BpfReader.hpp  BpfSyscallFrequencyReader.hpp  InfluxClient.hpp  K8sPerformanceCollector.hpp  Logger.hpp  MetricProcessor.hpp  RingBufReader.hpp  RingBufReaderDataT.hpp  RingBufReaderK8s.hpp
learn/eunomia/: README.md
src/: BpfReader.cpp  BpfSyscallFrequencyReader.cpp  InfluxClient.cpp  K8sPerformanceCollector.cpp  Logger.cpp  MetricProcessor.cpp  RingBufReader.cpp  RingBufReaderDataT.cpp  RingBufReaderK8s.cpp  hello.bpf.c  hello.py  main.cpp  main_hello_ring_buffer.cpp  main_k8s_performance.cpp  main_syscall_metrics.cpp
src/kubernetes-up-and-running/cap2/kuard/: Dockerfile.with.multistage.builds  Dockerfile.without.multistage.builds
src/kubernetes-up-and-running/cap2/simple-node-app/: Dockerfile  package-lock.json  package.json
src/main/cpp/: main.cpp
src/main/java/com/unicamp/ebpfagent/: DataT.java  EbpfAgent.java  EbpfMapReader.java  LibBpf.java  LibC.java  PollFd.java  PrometheusExporter.java  RingBufferConsumer.java  RingBufferReader.java
src/spring-app/: Dockerfile  build.gradle  compose.yml
src/spring-app/src/main/java/com/example/spring_app/: DemoApplication.java
src/spring-app/src/main/java/com/example/spring_app/controller/: HelloController.java
src/spring-app/src/main/resources/: application.yml
src/spring-app/src/test/java/com/example/spring_app/: DemoApplicationTests.java
